2010-03-01 16:14 -0800  Brendan Cully  <brendan@kublai.com>  (86d93280e5b3)

	* rfc822.c: Backed out changeset 2a4ca6917fd0. It is incompatible with
	$assumed_charset (see #2014).

2010-02-28 23:03 -0800  Brendan Cully  <brendan@kublai.com>  (2a4ca6917fd0)

	* rfc822.c: RFC-2047 decode address text before dequoting it (see
	#2014)

	* doc/manual.xml.head: Fix next-unread-mailbox name in
	documentation. Closes #3319.

2010-02-28 17:23 -0800  Antonio Radici  <antonio@dyne.org>  (25459cbb132a)

	* po/de.po: Fix German translation of "No undeleted messages." (closes
	#3372)

	* pop_lib.c: pop: allow user-specified port to override
	default in URL. Closes #3322.

2010-02-28 17:00 -0800  ludwig  <ludwig@fh-worms.de>  (2c78b28027cc)

	* crypt-gpgme.c: GPGME: Sender verification should be canse-
	insensitive for domain names. Closes #2180

2010-02-26 18:18 -0800  Brendan Cully  <brendan@kublai.com>  (40eca68c394a)

	* UPDATING, init.h: Make $thorough_search default to yes
	(closes #3386)

2010-02-23 12:42 -0800  Brendan Cully  <brendan@kublai.com>  (57124ea5592e)

	* commands.c: Don't use freed ctx.path when updating utime of target
	mailbox in save-message. Thanks to Sean Boudreau for the bug report.

2010-02-22 23:01 -0800  Vincent Lefevre  <vincent@vinc17.net>  (f17302c10229)

	* po/fr.po: Updated French translation.

2010-02-21 13:16 -0800  Brendan Cully  <brendan@kublai.com>  (a6fddecdc5f5)

	* curs_lib.c: Make mutt_yesorno use mutt_message to print query.
	Closes #3352.

2010-02-20 21:56 -0800  Gregory Shapiro  <dev.mutt.org@g.gshapiro.net>  (f723e07c8e6d)

	* OPS, UPDATING, curs_main.c, functions.h: Add imap-logout-
	all to log out of all IMAP connections. Closes #2880.

2010-02-17 00:47 -0800  Simon Ruderich  <simon@ruderich.org>  (260d39279161)

	* doc/manual.xml.head: Document 'n' and 'o' flags in index

	* doc/devel-notes.txt, doc/muttrc.man.head, init.h,
	rfc1524.c: Spelling fixes

2010-02-10 23:29 -0800  Brendan Cully  <brendan@kublai.com>  (b7ec848af36b)
